--- a/PF_PROJ/css/styles.css
+++ b/PF_PROJ/css/styles.css
@@ -3443,19 +3443,24 @@ table.datatable th:active {
 }
 .element-icon {
   float: left;
-  background: blue;
+  border: solid 2px #00a8e1;
+  border-radius: 100%;
   width: 40px;
   height: 40px;
 }
+.element-icon span {
+  margin-top: 5px;
+  width: 100%;
+  font-size: 22px;
+  text-align: center;
+}
 .element-body {
   margin-left: 45px;
-  background: aqua;
   line-height: 15px;
 }
 .element-body strong {
   display: block;
   font-size: 16px;
   font-weight: 300;
-  line-height: 25px;
-  background: red;
+  line-height: 22px;
 }
