adding structure to activity feed content

--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -113,3 +113,11 @@ float: right;
     // background: red;
   }
 }
+
+.activity-timeline{
+	margin-left: -38px;
+}
+
+.activity-timeline-date-label{
+	color: @gray-light;
+}
