--- a/PF_PROJ/css/styles.css
+++ b/PF_PROJ/css/styles.css
@@ -3470,3 +3470,9 @@ table.datatable th:active {
   font-weight: normal;
   line-height: 22px;
 }
+.activity-timeline {
+  margin-left: -38px;
+}
+.activity-timeline-date-label {
+  color: #999999;
+}
