added tooltips for activity feed components

--- a/PF_PROJ/css/styles.css
+++ b/PF_PROJ/css/styles.css
@@ -3476,3 +3476,6 @@ table.datatable th:active {
 .activity-timeline-date-label {
   color: #999999;
 }
+.bpm-hover-list {
+  white-space: pre-wrap;
+}
