--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -13,6 +13,7 @@
 // 	min-height: 600px;
 // }
 
+
 .recent-files {
  
  .recent-files-heading {
@@ -70,10 +71,22 @@
 	}
 }
 
+
+
+
 .circled-icon-indicator-set{
 float: right;  
-  margin-top: -13px;
+margin-top: -13px;
+
+  h5{
+    float: left;
+    margin: 0;
+    line-height: 40px;
+  }
+
 }
+
+
 
 .circled-icon-indicator{
   float: left;
@@ -115,7 +128,8 @@ float: right;
 }
 
 .activity-timeline{
-	margin-left: -38px;
+//	margin-left: -38px;
+margin-bottom: 20px;
 }
 
 .activity-timeline-date-label{
@@ -127,3 +141,10 @@ float: right;
 }
 
 
+.chart{
+  margin-bottom: 20px;
+  img{
+    width: 100%;
+  }
+
+}
