changed chart colors and fake data

--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -15,7 +15,7 @@
 
 
 .recent-files {
- 
+ max-width: 100%
  .recent-files-heading {
   border-bottom: 1px solid @card-pf-border-color;
 		margin: 0px -@grid-gutter-width*(3/4) 0px -@grid-gutter-width;
