--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -4,61 +4,6 @@
 @font-path:         "../bower_components/patternfly/dist/fonts";
 @icon-font-path:    "../bower_components/patternfly/components/bootstrap/fonts/";
 
-// .recent-files{
-// 	background: #f1f1f1;
-// 	min-height: 600px;
-// }
-
-// .card-area{
-// 	min-height: 600px;
-// }
-
-
-.recent-files {
- max-width: 100%
- .recent-files-heading {
-  border-bottom: 1px solid @card-pf-border-color;
-		margin: 0px -@grid-gutter-width*(3/4) 0px -@grid-gutter-width;
-		padding: 2px @grid-gutter-width 0px  @grid-gutter-width;
-}
-
-.recent-files-title {
-  font-size: @font-size-h3;
-  font-weight: 300;
-  margin: @grid-gutter-width/2 0;
-  padding: 0;
-}
-
-	h5 {
-		margin: 0 -@grid-gutter-width*(3/4) 0 -@grid-gutter-width;
-		padding: 0 @grid-gutter-width 20px  @grid-gutter-width;
-		border-bottom: 2px solid @gray-lighter;
-		color: @gray;
-		// font-size: @font-size-h4;
-	}
-
-	.list-group {
-		border-top: none;
-		padding-top: 10px;
-	}
-
-	.list-group-item {
-  		background-color: inherit;
-  		border: none;
-  		padding-left: 0;
-  		font-size: @font-size-small;
-  		a {
-  			text-decoration: none;
-  		}
-  		.list-group-item-text {
-  			color: @gray-light;
-  		}
-  		.list-group-item-heading {
-			// font-weight: bold;
-  		}
-	}
-}
-
 .bpm-card-list {
 	background: @card-pf-bg-color;
 	.list-group-item {
@@ -69,6 +14,67 @@
 			color: @gray-light;
 		}
 	}
+}
+
+.blank-card-bpm {
+  //.card-pf-body;
+  // background: red;
+  text-align: center;
+  .bpm-blank-slate-icon{
+    // background: blue;
+    color: @gray-light;
+    font-size: @font-size-h1 * 2.4;
+    line-height: @font-size-h1 * 2.4;
+  }
+  .bpm-blank-slate-main-action{
+    font-size: @font-size-h1;
+    margin-top: -10px; //@line-height-computed
+  }
+}
+
+.recent-files {
+  max-width: 100%;
+  .recent-files-heading {
+    border-bottom: 1px solid @card-pf-border-color;
+    margin: 0px -@grid-gutter-width*(3/4) 0px -@grid-gutter-width;
+    padding: 2px @grid-gutter-width 0px  @grid-gutter-width;
+  }
+
+  .recent-files-title {
+    font-size: @font-size-h3;
+    font-weight: 300;
+    margin: @grid-gutter-width/2 0;
+    padding: 0;
+  }
+
+  h5 {
+    margin: 0 -@grid-gutter-width*(3/4) 0 -@grid-gutter-width;
+    padding: 0 @grid-gutter-width 20px  @grid-gutter-width;
+    border-bottom: 2px solid @gray-lighter;
+    color: @gray;
+    // font-size: @font-size-h4;
+  }
+
+  .list-group {
+    border-top: none;
+    padding-top: 10px;
+  }
+
+  .list-group-item {
+    background-color: inherit;
+    border: none;
+    padding-left: 0;
+    font-size: @font-size-small;
+    a {
+      text-decoration: none;
+    }
+    .list-group-item-text {
+      color: @gray-light;
+    }
+    .list-group-item-heading {
+    // font-weight: bold;
+    }
+  }
 }
 
 .bpm-numeric-indicators{
@@ -135,7 +141,6 @@ margin-bottom: 20px;
 .bpm-hover-list{
     white-space:pre-wrap;
 }
-
 
 .bpm-homepage-chart{
   margin-bottom: 20px;
