--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -17,18 +17,16 @@
 }
 
 .blank-card-bpm {
-  //.card-pf-body;
-  // background: red;
+  //style for 'empty state cards'
   text-align: center;
   .bpm-blank-slate-icon{
-    // background: blue;
     color: @gray-light;
     font-size: @font-size-h1 * 2.4;
     line-height: @font-size-h1 * 2.4;
   }
   .bpm-blank-slate-main-action{
     font-size: @font-size-h1;
-    margin-top: -10px; //@line-height-computed
+    margin-top: -10px; //was: @line-height-computed
   }
 }
 
