--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -23,10 +23,15 @@
     color: @gray-light;
     font-size: @font-size-h1 * 2.4;
     line-height: @font-size-h1 * 2.4;
+    margin-bottom: 30px;
   }
   .bpm-blank-slate-main-action{
     font-size: @font-size-h1;
     margin-top: -10px; //was: @line-height-computed
+    margin-bottom: 30px;
+  }
+ .bpm-blank-slate-description {
+    //tbd
   }
 }
 
@@ -68,6 +73,10 @@
     }
     .list-group-item-text {
       color: @gray-light;
+    }
+    .list-group-item-empty-text {
+      color: @gray-light;
+      font-size: @font-size-base;
     }
     .list-group-item-heading {
     // font-weight: bold;
