--- a/PF_PROJ/css/styles.css
+++ b/PF_PROJ/css/styles.css
@@ -3414,44 +3414,37 @@ table.datatable th:active {
   margin-top: -10px;
   margin-bottom: 30px;
 }
-.recent-files {
+.sidebar-bpm {
   max-width: 100%;
+  background-color: #fff;
+  border-left: 1px solid #d0d0d0;
 }
-.recent-files .recent-files-heading {
-  border-bottom: 1px solid #d1d1d1;
-  margin: 0px -30px 0px -40px;
+.sidebar-bpm .sidebar-bpm-heading {
+  margin: 0px -20px 0px -40px;
   padding: 2px 40px 0px 40px;
 }
-.recent-files .recent-files-title {
-  font-size: 16px;
-  font-weight: 300;
-  margin: 20px 0;
-  padding: 0;
-}
-.recent-files h5 {
-  margin: 0 -30px 0 -40px;
-  padding: 0 40px 20px 40px;
-  border-bottom: 2px solid #eeeeee;
-  color: #555555;
-}
-.recent-files .list-group {
+.sidebar-bpm .list-group {
   border-top: none;
-  padding-top: 10px;
 }
-.recent-files .list-group-item {
+.sidebar-bpm .list-group-item {
   background-color: inherit;
   border: none;
   padding-left: 0;
   font-size: 11px;
 }
-.recent-files .list-group-item a {
+.sidebar-bpm .list-group-item a {
   text-decoration: none;
 }
-.recent-files .list-group-item .list-group-item-text {
+.sidebar-bpm .list-group-item .list-group-item-text {
+  margin-top: -2px;
   color: #999999;
 }
-.recent-files .list-group-item .list-group-item-empty-text {
+.sidebar-bpm .list-group-item .list-group-item-empty-text {
   color: #999999;
+  font-size: 12px;
+}
+.sidebar-bpm .list-group-item .list-group-item-heading {
+  font-weight: normal;
   font-size: 12px;
 }
 .bpm-numeric-indicators {
