--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -39,6 +39,7 @@
 // right-hand sidebar, containing lists of links
 .sidebar-bpm {
   max-width: 100%;
+  // overflow: hidden; 
   background-color: #fff;
   border-left: 1px solid @sidebar-pf-border-color;
 
