--- a/PF_PROJ/less/styles.less
+++ b/PF_PROJ/less/styles.less
@@ -17,6 +17,15 @@
 	}
 }
 
+.add-rm-users-bpm {
+  max-height: 30em;
+  overflow-y: auto;
+}
+
+.modal-subsection-label-bpm {
+  padding-top: 1em;
+}
+
 // style for 'empty state cards'
 .blank-card-bpm {
   text-align: center;
